--- a/gallery.html
+++ b/gallery.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery - Capolavoro Makeup</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-        <h1>Capolavoro Makeup</h1>
+        <h1>Capolavoro Makeup<br><span>(God's masterpiece)</span></h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -19,10 +20,31 @@
         </nav>
     </header>
 
+
+
     <main>
+        <div class="gallery-container">
+            <div class="gallery-intro">
         <h2>Our Gallery</h2>
-        <p>View our portfolio of stunning makeup artistry.</p>
+        <p>Each look is a unique masterpiece. Browse our portfolio of transformative beauty.</p>
+        </div>
+        <div class="gallery-grid">
+
+            <div class="gallery-item"><img src="images/makeup1.jpg (2).jpg" alt="..."></div>
+                <div class="gallery-item"><img src="images/makeup2.jpg (2).jpg" alt="..."></div>
+                <div class="gallery-item"><img src="images/makeup3.jpg.jpg" alt="..."></div>
+                <div class="gallery-item"><img src="images/makeup4.jpg.jpg" alt="..."></div>
+                <div class="gallery-item"><img src="images/makeup5.jpg.jpg" alt="..."></div>
+                <div class="gallery-item"><img src="images/makeup6.jpg.jpg" alt="..."></div>
+                <div class="gallery-item"><img src="images/makeup7.jpg.jpg" alt="..."></div>
+                <div class="gallery-item"><img src="images/makeup8.jpg.jpg" alt="..."></div>
+                <div class="gallery-item"><img src="images/makeup9.jpg.jpg" alt="..."></div>
+            </div>
+
+        </div>
     </main>
-    
+    <footer>
+        <p>&copy; 2025 Capolavoro Makeup Artistry. All rights reserved.</p>
+    </footer>
 </body>
 </html>
