--- a/index.html
+++ b/index.html
@@ -4,30 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Capolavoro Makeup</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
-<header>
-    <h1>Capolavoro Makeup</h1>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-</header>
-
-<main>
-    <h2>Welcome to Capolavoro</h2>
-    <p>Your beauty is our art. Discover our professional makeup services.</p>
-
-</main>
-
-<footer>
-    <p>&copy; 2025 Capolavoro Makeup Artistry. All rights reserved.</p>
-</footer>
 <body>
-    
+    <header>
+        <h1>Capolavoro Makeup<br><span>(God's masterpiece)</span></h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="hero">
+        <div class="hero-content">
+        <h2>Reveal Your Masterpiece</h2>
+        <p>Professional makeup artistry that celebrates your unique beauty.</p>
+        <a href="gallery.html" class="cta-button">View Our Gallery</a>
+        <a href="contact.html" class="cta-button secondary">Book Appointment</a>
+        </div>
+        <div class="hero-images">
+            <div class="hero-image">
+                <img src="images/makeup16.jpg" alt="Makeup brushes">
+    </div>
+    <div class="hero-image">
+        <img src="images/makeup13.jpg" alt="Makeup collection">
+        </div>
+    </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Capolavoro Makeup Artistry. All rights reserved.</p>
+    </footer>
 </body>
 </html>
