--- a/services.html
+++ b/services.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services - Capolavoro Makeup</title>
-</head>
+    <link rel="stylesheet" href="./css/style.css">
+    </head>
 <body>
     <header>
-        <h1>Capolavoro Makeup</h1>
+        <h1>Capolavoro Makeup<br><span>(God's masterpiece)</span></h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -17,11 +18,44 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-    </header>
+    </header>    
 
     <main>
+        <div class="services-container">
+        <div class="services-intro">
         <h2>Our Services</h2>
-        <p>Discover our professional makeup packages.</p>
+        <p>Each service is tailored to highlight your unique beauty and make you feel confident for any occassion.</p>
+        </div>
+
+        <div class="services-grid">
+            <div class="service-item">
+                <h3>Bridal Makeup</h3>
+                <p>Look and feel radiant on your special day with long-lasting, photography-ready makeup.</p>
+                <span class="price">From R850</span>
+            </div>
+
+            <div class="service-item">
+                <h3>Evening Glam</h3>
+                <p>Perfect for galas, parties, or special events. Dramatic looks that make you stand out.</p>
+                <span class="price">From R700</span>
+                </div>
+                
+                <div class="service-item">
+                    <h3>Natural Day Makeup</h3>
+                    <p>Fresh, lightweight makeup that enhances your natural features for daytime events.</p>
+                <span class="price">From R600</span>
+                </div>
+
+                <div class="service-item">
+                    <h3>Editorial & Creative</h3>
+                    <p>Bold, artistic looks for photoshoots, fashion events, or when you want to make a statement.</p>
+                    <span class="price">From R900</span>
+                </div>
+                </div>
+                </div>
     </main>
+    <footer>
+        <p>&copy; 2025 Capolavoro Makeup Artistry. All rights reserved.</p>
+    </footer>
 </body>
 </html>
