--- a/about.html
+++ b/about.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Capolavoro Makeup</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-        <h1>Capolavoro Makeup</h1>
+        <h1>Capolavoro Makeup<br><span>(God's masterpiece)</span></h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -20,12 +21,23 @@
     </header>
 
     <main>
+        <div class="about-container">
+            <div class="about-image">
+                <img src="images/profile3.jpg" alt="Konke Khoza - Makeup Artist">
+        </div>
+        <div class="about-text">
         <h2>About Us</h2>
-        <p>Learn about mission to make you feel like a masterpiece.</p>
-    </main>
+        <p>Founded by Konke Khoza, Capolavoro is more than a makeup studio-it's a celebration of individiuality. The name, meaning "masterpiece" in Italian, reflects our core belief: every person is a unique work of art.</p>
 
+        <p>With over 3 years of professional experience, we specialize in bridal, editorial, and special event makeup. Our mission is to enhance your natural beauty and make you feel confident and radiant.</p>
+
+        <p>We believe that makeup is a tool for self-expression, and our goal is to help you reveal masterpiece that you already are.</p>
+        </div>
+        </div>
+    </main>
+    
     <footer>
-        <p>&copy; 2025 Capolavoro Makeup Artistry. All rights reserved</p>
-    </footer> 
+        <p>&copy; 2025 Capolavoro Makeup Artistry. All rights reserved.</p>
+    </footer>
 </body>
 </html>
